--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ var diagnoses = {
   ooii: "dynamic, function-local"
 };
 
-document.getElementById("answer").innerHTML = diagnoses[code];
+document.getElementById("answer").innerHTML = diagnoses[code] + "(" + results.join(", ") + ")";
 
 })();
 </script>
