--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@ function test() {
 }
 
 var results = test();
-var code = results[0].charAt(0) + results[1].charAt(0) + results[2].charAt(0) + results[3].charAt(0);
+
+var code = results[0].charAt(0)
+         + results[1].charAt(0)
+         + results[2].charAt(0)
+         + results[3].charAt(0);
+
 var diagnoses = {
   oiio: "static, block-local",
   ooio: "dynamic, block-local",
@@ -123,7 +128,7 @@ var diagnoses = {
   ooii: "dynamic, function-local"
 };
 
-document.getElementById("answer").innerHTML = diagnoses[code] + " (" + results.join(", ") + "; " + code + ")";
+document.getElementById("answer").innerHTML = diagnoses[code];
 
 })();
 </script>
